// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticPage snapshots tests renders StaticPage with title and text 1`] = `
<div
  className="layout-fill"
>
  <h1
    className="page-title display-1"
  >
    about
  </h1>
  <Card
    className="layout-card"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
  >
    <CardHeader
      avatar={null}
      className="card-header"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <h2
            className="headline"
          >
            about
          </h2>
        </div>
        <div
          className="column"
        />
      </div>
    </CardHeader>
    <CardText
      className="body-1"
    >
      <br />
      <div>
        this is about page
      </div>
    </CardText>
  </Card>
</div>
`;

exports[`StaticPage snapshots tests renders StaticPage with title, text and help button 1`] = `
<div
  className="layout-fill"
>
  <h1
    className="page-title display-1"
  >
    about
  </h1>
  <Card
    className="layout-card"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
  >
    <CardHeader
      avatar={null}
      className="card-header"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <h2
            className="headline"
          >
            about
          </h2>
        </div>
        <div
          className="column"
        >
          <Connect(HelpIcon)
            text="help text"
            title="help"
          />
        </div>
      </div>
    </CardHeader>
    <CardText
      className="body-1"
    >
      <br />
      <div>
        this is about page
      </div>
    </CardText>
  </Card>
</div>
`;
